# bossqu

./: app.py  railway.toml  requirements.txt
bossqu-ai/: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
bossqu-ai/src/: main.py
bossqu-ai/src/api/socket/: server.py
bossqu-ai/src/api/socket/controllers/: base_controller.py  chat_controller.py
bossqu-ai/src/core/assistant/: service.py
bossqu-ai/src/core/assistant/config/: llm_models.py
bossqu-ai/src/core/assistant/llm_models/: deepseek.py  interface.py
bossqu-ai/src/core/infrastructures/vector_store/: chroma.py  interface.py  qdrant.py
bossqu-ai/src/core/repositories/: conversation_context.py
bossqu-ai/src/core/repositories/rag/: rag.py
bossqu-ai/src/core/repositories/vectorstore/: chroma_repository.py
bossqu-ai/src/core/services/assistant/: assistant.py
bossqu-ai/src/core/services/assistant/config/: llm_config.py
bossqu-ai/src/core/services/assistant/llm_models/: deepseek.py  interface.py
bossqu-ui/: package-lock.json  package.json
bossqu-ui/public/: site.webmanifest
bossqu-ui/src/app/: globals.css  layout.tsx
bossqu-ui/src/app/chat/: page.js
simawen/ai/bot/constants/: model.py
simawen/ai/bot/models/: deepseek_fireworks.py
simawen/ai/config/: llm.py
simawen/ui/webapp/: app.py
wen-sima-ai/ai/bot/: simabot.py
wen-sima-ai/ai/bot/interfaces/: llm.py
wen-sima-ai/ai/config/: llm.py
wen-sima-ai/ui/webapp/: app.py
wen-simayi-ui/: package-lock.json  package.json
wen-simayi-ui/public/: bossqu-id-2.png:Zone.Identifier
wen-simayi-ui/src/app/: globals.css
(+18 files in other folders)
